--- a/src/main/resources/lv/itlat/dima/data-entry.fxml
+++ b/src/main/resources/lv/itlat/dima/data-entry.fxml
@@ -6,30 +6,30 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx"
+<fx:root xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lv.itlat.dima.DataEntryController">
+            type="lv.itlat.dima.DataEntryForm">
 
     <center>
         <GridPane vgap="8" hgap="8">
 
             <Label text="Name"  GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-            <TextField          GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+            <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
             <Label text="Email" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextField          GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <TextField fx:id="emailField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
             <Label text="Phone" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-            <TextField          GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <TextField fx:id="phoneField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
         </GridPane>
     </center>
 
     <bottom>
         <HBox spacing="10" alignment="CENTER_RIGHT">
-            <Button text="Ok"/>
-            <Button text="Cancel"/>
+            <Button text="Ok"     onAction="#okPressed"/>
+            <Button text="Cancel" onAction="#cancelPressed"/>
         </HBox>
     </bottom>
 
-</BorderPane>
+</fx:root>
