--- a/src/main/resources/lv/itlat/dima/data-entry.fxml
+++ b/src/main/resources/lv/itlat/dima/data-entry.fxml
@@ -22,6 +22,9 @@
             <Label text="Phone" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
             <TextField fx:id="phoneField" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
+            <Label fx:id="idLabel" text=""
+                   GridPane.rowIndex="3" GridPane.columnIndex="0"
+                   GridPane.columnSpan="2"/>
         </GridPane>
     </center>
 
